:books: Add JDK 11 to test matrix table